# sceptr

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yaml  tests.yaml
docs/: api.rst  citing.rst  conf.py  index.rst  installation.rst  sceptr.rst  sceptr_model.rst  sceptr_sceptr.rst  sceptr_variant.rst  troubleshooting.rst  usage.rst
docs/_static/css/: colours.css
src/blastr/: __init__.py  default_functions.py  model_wrapper.py
src/blastr/_lib/: blastr.py  tcr_representation_model.py
src/blastr/_lib/config_reader/: config_reader.py
src/blastr/_lib/nn/: bert.py  mlm_token_prediction_projector.py
src/blastr/_model_saves/: __init__.py
src/blastr/_model_saves/AB_SCEPTR/: config.json  log.csv
src/blastr/_model_saves/Beta_CDR_BERT_Unsupervised/: config.json  state_dict.pt
src/blastr/_model_saves/Beta_CDR_BERT_Unsupervised_Large/: config.json
src/blastr/_model_saves/SCEPTR/: config.json
src/blastr/blastr/: __init__.py  _default_model.py
src/blastr/datahandling/: dataloaders.py  datasets.py  tokenisers.py
src/blastr/model_saves/: __init__.py
src/blastr/model_saves/BCDRBERT_+ACL_cns/: config.json  log.csv  state_dict.pt
src/blastr/model_saves/CDRBERT_+ACL_cns_020_cdrcns_001_chaincns_020/: config.json  log.csv  state_dict.pt
src/blastr/models/: __init__.py  atchleyembedder.py  embedder.py  randomembedder.py  wrappers.py
src/blastr/models/bert/: bert.py  cdr3bert.py  cdrbert.py  vcdr3bert.py
src/blastr/resources/: __init__.py  v_cdrs.json
src/blastr/variant/: __init__.py  _beta_cdr_bert_unsupervised.py  _beta_cdr_bert_unsupervised_large.py  _load_variant.py
src/sceptr/: __init__.py  model.py  variant.py
src/sceptr/_lib/: sceptr.py  tcr_metric.py  tcr_representation_model.py
src/sceptr/_lib/config_reader/: config_reader.py
src/sceptr/_lib/nn/: bert.py  self_attention_stack.py  trainable_model.py
src/sceptr/_lib/schema/: __init__.py  df_manipulation.py  pmhc.py  tcr.py  tcr_pmhc_pair.py
src/sceptr/_model_saves/: __init__.py
src/sceptr/_model_saves/AB_SCEPTR/: config.json  log.csv  state_dict.pt
src/sceptr/_model_saves/AB_SCEPTR_BLOSUM/: config.json  log.csv
src/sceptr/_model_saves/AB_SCEPTR_CDR3_only/: state_dict.pt
src/sceptr/_model_saves/AB_SCEPTR_Large_CDR3_only_MLM_only/: config.json  log.csv  state_dict.pt
src/sceptr/_model_saves/AB_SCEPTR_MLM_only/: config.json  log.csv  state_dict.pt
src/sceptr/_model_saves/AB_SCEPTR_classic/: config.json  log.csv
src/sceptr/_model_saves/A_SCEPTR/: log.csv  (+2 more)
src/sceptr/sceptr/: __init__.py  _default_model.py
src/sceptr/variant/: __init__.py  _a_sceptr.py  _ab_sceptr.py  _ab_sceptr_blosum.py  _ab_sceptr_large.py  _b_sceptr.py  _load_variant.py
tests/: bad_cdr3a.csv  bad_trav.csv  mock_data.csv  mock_data_musmusculus.csv  test_default_functions.py  test_dummy.py  test_errors.py  test_functional_api.py  test_musmusculus_support.py  test_residue_representations.py  test_variants.py
(+125 files in other folders)
