[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sceptr"
authors = [
    {name = "Yuta Nagano", email = "yutanagano51@proton.me"}
]
description = "Simple Contrastive Embedding of the Primary sequence of T cell Receptors."
dependencies = [
    "libtcrlm @ git+https://github.com/yutanagano/libtcrlm.git@c5008428f31ee240a45894fd2cab72e4e94ff45c",
    "numpy~=1.26",
    "pandas~=2.0",
    "torch~=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tox"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "sceptr.VERSION"}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The PyTorch API"
]
